edits alt txt in html

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 
         <div class="carousel-item active">
           <h2>Everyone always ask where is the AI bot, Never HOW is the AI bot, Until Now. :)</h2>
-          <img class="testimonial-image"src="images/robot.jpeg" alt="dog-profile">
-          <em>Pebbles, New York</em>
+          <img class="testimonial-image"src="images/robot.jpeg" alt="robot-profile">
+          <em>Los Angeles, California</em>
         </div>
 
         <div class="carousel-item">
           <h2 class="testimonial-text"> 0110001001100. 100010000101010101001. Translation : "I've finally found a place where I feel at home! Always some great bot talk."</h2>
-          <img class="testimonial-image" src="images/robot-2.jpeg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
+          <img class="testimonial-image" src="images/robot-2.jpeg" alt="robot-profile">
+          <em>Irvine, California</em>
         </div>
 
       </div>
