edits index.html to add contact info

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!-- Press -->
   <section id="press">
-    <!-- <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo"> -->
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -218,6 +218,7 @@
     <i class="fa-solid fa-envelope footer-icons"></i>
     
     <p class="footer-p">© Copyright BeepBoop</p>
+    <p class="footer-p">Created by Ummer Khan | UmmerKhan510@Gmail.com</p>
   </footer>
 
 </body>
